@@ -2,6 +2,7 @@
 
 CCK 6.2.dev
 ============
+- #270315 Update simpletest to use DrupalWebTestCase.
 - #227951 Add permission for ability to use php code for default values and allowed values.
 - #271294 Add TODO to get rid of content_write_record() once drupal_write_record() is patched.
 - #271294 Add documentation for the reason for having a custom version of drupal_write_record.
